# critter

./: .gitignore  README
backend/: .gitignore  Dockerfile  create_tables.py  database.py  docker-compose.yml  main.py  pyproject.toml  seed_database.py  serve_dev.py  serve_prod.py  service.tf  terraform.tfstate  terraform.tfstate.backup  test.py
backend/critter/: .env  main.py
backend/critter/common/: __init__.py  auth.py  authenticated.py  authentication.py
backend/critter/controllers/: post.py
backend/critter/core/: __init__.py  config.py  error.py  security.py
backend/critter/database/: __init__.py  connector.py  create_tables.py  seed_database.py  test.py
backend/critter/middleware/: authenticated.py
backend/critter/models/: __init__.py  models.py
backend/critter/routers/: auth.py  chirps.py  posts.py  users.py
backend/critter/schemas/: __init__.py  auth.py  base.py  posts.py  users.py
backend/critter/types/: auth.py
backend/database/: create_tables.py  query.py  seed_database.py
backend/models/: models.py
backend/routers/: users.py
frontend/: package-lock.json  package.json
frontend/critter/: .env  package-lock.json  package.json
frontend/critter/public/: index.html
frontend/critter/src/: App.js  index.js
frontend/critter/src/components/: CreatePost.js  Header.js  Interactions.js  IsAuth.js  LatestPosts.js  Logo.js  PopularUsers.js  Post.js  Posts.js  Reply.js  TopPosts.js  User.js
infrastructure/: CIDR.md  deploy.ps1  deploy.sh  stack.yml  variables.ps1  variables.sh
infrastructure/templates/: database.yml  network.yml  security.yml  web.yml
(+17 files in other folders)
