[tool.poetry]
name = "critter"
version = "0.1.0"
description = "Twitter for critters"
authors = ["stromjust <justas.stromilas@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
